--- a/static/index.html
+++ b/static/index.html
@@ -5,6 +5,7 @@
     <meta charSet="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Dashboard - Foundry</title>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans&display=swap" rel="stylesheet">
     <style>
         body {
             background-color: #ffffff;
