--- a/static/index.html
+++ b/static/index.html
@@ -19,6 +19,11 @@
 
 <body>
     <div id='elm'></div>
+    <script>
+        var app = Elm.App.init({
+            node: document.getElementById('elm')
+        });    
+    </script>
 </body>
 
 </html>
