--- a/static/index.html
+++ b/static/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Dashboard - Foundry</title>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" type="image/ico" href="./favicon.ico" />
     <style>
         body {
             background-color: #ffffff;
