Add dashboard to GA cross-domain linking

--- a/static/index.html
+++ b/static/index.html
@@ -14,6 +14,7 @@
                 'domains':
                     [
                         'sale.foundrydao.com',
+                        'dashboard.foundrydao.com',
                         'foundrydao.com'
                     ],
                 'linker': {
