--- a/static/index.html
+++ b/static/index.html
@@ -6,7 +6,7 @@
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-143211145-4"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
+        window.gtag = function gtag(){ dataLayer.push(arguments); }
         gtag('js', new Date());
 
         gtag('config', 'UA-143211145-4', {
