--- a/static/index.html
+++ b/static/index.html
@@ -6,7 +6,7 @@
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-143211145-4"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
-        window.gtag = function gtag(){ dataLayer.push(arguments); }
+        window.gtag = function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
 
         gtag('config', 'UA-143211145-4', {
@@ -36,6 +36,10 @@
     </style>
     <meta name="description" content="Foundry" />
     <meta name="author" content="OG Log" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ramda/0.27.0/ramda.js"
+        integrity="sha256-buL0byPvI/XRDFscnSc/e0q+sLA65O9y+rbF+0O/4FE=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.js"
+        integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
     <script type="application/javascript" src="./js/index.js"></script>
 
 </head>
