--- a/static/index.html
+++ b/static/index.html
@@ -7,6 +7,8 @@
     <script>
         window.dataLayer = window.dataLayer || [];
         window.gtag = function gtag() { dataLayer.push(arguments); }
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
 
         gtag('config', 'UA-143211145-4', {
@@ -15,7 +17,10 @@
                     [
                         'sale.foundrydao.com',
                         'dashboard.foundrydao.com',
-                        'foundrydao.com'
+                        'foundrydao.com',
+                        'foundrydao.eth.link',
+                        'smokesignal.eth.link',
+                        'daihard.exchange'
                     ],
                 'linker': {
                     'accept_incoming': true
