refactor code for adding network(s)

--- a/static/index.html
+++ b/static/index.html
@@ -38,7 +38,7 @@
         }
     </style>
     <meta name="description" content="Foundry" />
-    <meta name="author" content="OG Log" />
+    <meta name="author" content="Team Toast" />
     <script type="application/javascript" src="./js/index.js"></script>
 
 </head>
